fixed lack of Chrome support for vw units in letter-spacing

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -20,13 +20,13 @@ html {
 .branding {
   font-size: 4vh;
   font-weight: bold;
-  letter-spacing: 0.6vw;
+  letter-spacing: 4.8px;
 }
 
 .log-in-out {
   float: right;
   font-size: 3vh;
-  letter-spacing: 0.25vw;
+  letter-spacing: 2px;
   cursor: pointer;
 }
 
